--- a/2025/09/2025_09_21.md
+++ b/2025/09/2025_09_21.md
@@ -3,3 +3,8 @@
 > 今天上午很困，没有休息好，上午补觉了，下午好好学习吧
 > 帮助学长收拾实验室也没收拾好，真的太没用了
 > 今天的任务是：看一篇论文，学一下昨天没学完的sklearn 库
+
+## 什么时候才能捡起我那心里一直想要学习的蹩脚的日语呢？
+
+> 没事吧
+>
